--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assest/wazid.jpg
+    - assets/images/wazid.jpg
+    - assets/images/sujon.jpg
+    - assets/images/mithun.jpg
+    - assets/images/jakir.jpg
+    - assets/images/nahid.jpg
+    - assets/images/himu.jpg
+    - assets/images/anik.jpg
+    - assets/images/bappy.jpg
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
