new donors added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,15 @@ flutter:
     - assets/images/himu.jpg
     - assets/images/anik.jpg
     - assets/images/bappy.jpg
+    - assets/images/alif.jpg
+    - assets/images/mubin.jpg
+    - assets/images/sohodev.jpg
+    - assets/images/tariq.jpg
+    - assets/images/akash.jpg
+    
+
+
+
     
   #   - images/a_dot_ham.jpeg
 
