card view changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - assets/images/sohodev.jpg
     - assets/images/tariq.jpg
     - assets/images/akash.jpg
+    - assets/images/shohid.jpg
     
 
 
