--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     - assets/images/tariq.jpg
     - assets/images/akash.jpg
     - assets/images/shohid.jpg
+    - assets/images/akash.png
+    - assets/images/alamin.jpg
     
 
 
