Deploy build/web to Netlify

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - assets/images/tariq.jpg
     - assets/images/akash.jpg
     - assets/images/shohid.jpg
-    - assets/images/akash.png
+    - assets/images/itachi.jpg
     - assets/images/alamin.jpg
     
 
