--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,11 @@ flutter:
     - assets/images/shohid.jpg
     - assets/images/itachi.jpg
     - assets/images/alamin.jpg
+    - assets/assets/images/rakib.jpg
+    - assets/assets/images/alom.jpg
+    - assets/assets/images/shuvo.jpg
+    - assets/assets/images/shofiq.jpg
+    # - assets/images/alamin.jpg
     
 
 
