--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/assets/images/alom.jpg
     - assets/assets/images/shuvo.jpg
     - assets/assets/images/shofiq.jpg
+    - assets/assets/images/samir.jpg
     # - assets/images/alamin.jpg
     
 
