--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ flutter:
     - assets/assets/images/shuvo.jpg
     - assets/assets/images/shofiq.jpg
     - assets/assets/images/samir.jpg
+    - assets/assets/images/samiransari.jpg
+    - assets/assets/images/akbor.jpg
     # - assets/images/alamin.jpg
     
 
