--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/assets/images/samir.jpg
     - assets/assets/images/samiransari.jpg
     - assets/assets/images/akbor.jpg
+    - assets/assets/images/emon.jpg
     # - assets/images/alamin.jpg
     
 
