--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/assets/images/samiransari.jpg
     - assets/assets/images/akbor.jpg
     - assets/assets/images/emon.jpg
+    - assets/assets/images/kawser.jpg
     # - assets/images/alamin.jpg
     
 
